--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -8,12 +8,16 @@
     "build": "tsc",
     "serve": "cross-env NODE_ENV=production node dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "prisma": "npx prisma"
+    "prisma": "npx prisma",
+    "migrate": "npx prisma migrate dev",
+    "seed": "npx prisma db seed",
+    "generate": "npx prisma generate"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^5.7.1",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "dotenv": "^16.3.1",
@@ -23,9 +27,13 @@
     "typescript": "^5.3.3"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "prisma": "^5.7.1",
     "tsconfig-paths": "^4.2.0"
+  },
+  "prisma": {
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   }
 }
