--- a/package.json
+++ b/package.json
@@ -36,6 +36,11 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
-    "framer-motion": "^11.2.6"
+    "axios": "^1.7.2",
+    "bcryptjs": "^2.4.3",
+    "framer-motion": "^11.2.6",
+    "next-auth": "^4.24.7",
+    "react-hook-form": "^7.51.5",
+    "validator": "^13.12.0"
   }
 }
