--- a/package.json
+++ b/package.json
@@ -37,9 +37,14 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "axios": "^1.7.2",
+    "bcryptjs": "^2.4.3",
     "framer-motion": "^11.2.6",
     "react-icons": "^5.2.1",
     "react-slick": "^0.30.2",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "next-auth": "^4.24.7",
+    "react-hook-form": "^7.51.5",
+    "validator": "^13.12.0"
   }
 }
