--- a/package.json
+++ b/package.json
@@ -40,11 +40,10 @@
     "axios": "^1.7.2",
     "bcryptjs": "^2.4.3",
     "framer-motion": "^11.2.6",
-    "react-icons": "^5.2.1",
-    "react-slick": "^0.30.2",
-    "slick-carousel": "^1.8.1",
     "next-auth": "^4.24.7",
     "react-hook-form": "^7.51.5",
-    "validator": "^13.12.0"
+    "react-icons": "^5.2.1",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1"
   }
 }
