--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -14,6 +14,6 @@
     }
   },
   // "include": ["src/**/*"],
-  "include": ["**/*.ts"],
+  "include": ["**/*.ts", "../web/src/utils/axiosInstance.ts"],
   "exclude": ["node_modules"]
 }
