--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -24,7 +24,11 @@
     "express": "^4.18.2",
     "handlebars": "^4.7.8",
     "jsonwebtoken": "^9.0.2",
-    "ts-node-dev": "^2.0.0"
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.13",
+    "ts-node": "^10.9.2",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.3.3"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
