--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,9 +10,11 @@
     "test": "npx cypress verify & cypress run --component"
   },
   "dependencies": {
+    "formik": "^2.4.6",
     "next": "^14.2.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/node": "^20",
