--- a/package.json
+++ b/package.json
@@ -37,12 +37,16 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@reduxjs/toolkit": "^2.2.5",
+    "@types/react-redux": "^7.1.33",
     "axios": "^1.7.2",
     "bcryptjs": "^2.4.3",
     "framer-motion": "^11.2.6",
+    "jsonwebtoken": "^9.0.2",
     "next-auth": "^4.24.7",
     "react-hook-form": "^7.51.5",
     "react-icons": "^5.2.1",
+    "react-redux": "^9.1.2",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1"
   }
