--- a/apps/web/.env
+++ b/apps/web/.env
@@ -1,2 +1,4 @@
 NEXT_PUBLIC_BASE_API_URL=http://localhost:8000/api/
 API_URL="http://localhost:8000"
+RAJAONGKIR_API_URL="https://pro.rajaongkir.com/api"
+RAJAONGKIR_API_KEY="7825cdd7187a1b01bbca3c4db185d1d6"
