--- a/package.json
+++ b/package.json
@@ -44,11 +44,13 @@
     "framer-motion": "^11.2.6",
     "jsonwebtoken": "^9.0.2",
     "next-auth": "^4.24.7",
+    "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^6.9.0",
     "react-hook-form": "^7.51.5",
     "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
     "react-slick": "^0.30.2",
+    "react-sparklines": "^1.7.0",
     "slick-carousel": "^1.8.1"
   }
 }
