--- a/apps/api/.env.development
+++ b/apps/api/.env.development
@@ -6,4 +6,5 @@ NODEMAILER_EMAIL="farizwarman@gmail.com"
 NODEMAILER_PASS="qxwv uqnb ffsv oilp"
 # GOOGLE_CLIENT_ID="695011427214-rr71el7trk9c9844o0dgcbp68eah5a7b.apps.googleusercontent.com"
 # GOOGLE_CLIENT_SECRET="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"
+# NEXTAUTH_SECRET="finpro_jcwdol013"
 NEXAUTH_URL="http://localhost:3000"
