--- a/apps/api/.env.development
+++ b/apps/api/.env.development
@@ -1,10 +1,10 @@
 NODE_ENV=development
 PORT=8000
-DATABASE_URL="mysql://root:perumnas3@localhost:3306/finpro_DB"
+DATABASE_URL="mysql://root:Redeall123$@localhost:3306/finpro_DB"
 API_KEY="finpro1"
 NODEMAILER_EMAIL="farizwarman@gmail.com"
 NODEMAILER_PASS="qxwv uqnb ffsv oilp"
-GOOGLE_CLIENT_ID="1064162750543-kjr3kejggfsvsu0nn0r7n2d7f5fdjbts.apps.googleusercontent.com"
-GOOGLE_CLIENT_SECRET="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"
-NEXTAUTH_SECRET="finpro_jcwdol013"
+# GOOGLE_CLIENT_ID="695011427214-rr71el7trk9c9844o0dgcbp68eah5a7b.apps.googleusercontent.com"
+# GOOGLE_CLIENT_SECRET="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"
+# NEXTAUTH_SECRET="finpro_jcwdol013"
 NEXAUTH_URL="http://localhost:3000"
