--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@commitlint/cli": "^18.4.2",
     "@commitlint/config-conventional": "^18.4.2",
+    "@types/faker": "^6.6.9",
     "@types/react-slick": "^0.23.13",
     "eslint": "^8.48.0",
     "husky": "^8.0.0",
@@ -35,8 +36,11 @@
   "dependencies": {
     "@chakra-ui/icons": "^2.1.1",
     "@chakra-ui/react": "^2.8.2",
+    "@chakra-ui/stat": "^2.1.1",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@progress/kendo-react-buttons": "^8.0.0",
+    "@progress/kendo-react-charts": "^8.0.0",
     "@reduxjs/toolkit": "^2.2.5",
     "@types/react-redux": "^7.1.33",
     "axios": "^1.7.2",
@@ -44,11 +48,15 @@
     "framer-motion": "^11.2.6",
     "jsonwebtoken": "^9.0.2",
     "next-auth": "^4.24.7",
+    "react-apexcharts": "^1.4.1",
+    "react-calendar": "^5.0.0",
+    "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^6.9.0",
     "react-hook-form": "^7.51.5",
     "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
     "react-slick": "^0.30.2",
+    "react-sparklines": "^1.7.0",
     "slick-carousel": "^1.8.1"
   }
 }
