--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -19,6 +19,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
+    "react-parallax": "^3.5.1",
     "react-redux": "^9.1.2",
     "react-toastify": "^10.0.5",
     "swiper": "^11.1.4",
