--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react-redux": "^9.1.2",
     "react-slick": "^0.30.2",
     "react-sparklines": "^1.7.0",
+    "react-toastify": "^10.0.5",
     "slick-carousel": "^1.8.1"
   }
 }
