--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -27,11 +27,13 @@
     "handlebars": "^4.7.8",
     "haversine": "^1.1.1",
     "jsonwebtoken": "^9.0.2",
+    "midtrans-node-client": "^0.0.6",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.13",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "xendit-node": "^1.22.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
