--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,6 +14,7 @@
     "@reduxjs/toolkit": "^2.2.5",
     "axios": "^1.7.2",
     "formik": "^2.4.6",
+    "mapbox-gl": "^3.4.0",
     "next": "^14.2.3",
     "next-auth": "^4.24.7",
     "react": "^18",
@@ -27,6 +28,7 @@
   },
   "devDependencies": {
     "@types/faker": "^6.6.9",
+    "@types/mapbox-gl": "^3.1.0",
     "@types/next-auth": "^3.15.0",
     "@types/node": "^20",
     "@types/react": "^18",
