--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
     "@reduxjs/toolkit": "^2.2.5",
+    "atomic-spinner": "^1.3.1",
     "axios": "^1.7.2",
     "formik": "^2.4.6",
     "mapbox-gl": "^3.4.0",
