--- a/apps/api/.env.development
+++ b/apps/api/.env.development
@@ -1,7 +1,7 @@
 NODE_ENV=development
 PORT=8000
 FRONTEND_URL="http://localhost:3000"
-DATABASE_URL="mysql://root:Redeall123$@localhost:3306/finpro_DB"
+DATABASE_URL="mysql://root:perumnas3@localhost:3306/finpro_DB"
 API_KEY="finpro1"
 NODEMAILER_EMAIL="farizwarman@gmail.com"
 NODEMAILER_PASS="qxwv uqnb ffsv oilp"
