--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@commitlint/cli": "^18.4.2",
     "@commitlint/config-conventional": "^18.4.2",
     "@types/faker": "^6.6.9",
+    "@types/node-cron": "^3.0.11",
     "@types/react-slick": "^0.23.13",
     "eslint": "^8.48.0",
     "husky": "^8.0.0",
@@ -45,9 +46,11 @@
     "@types/react-redux": "^7.1.33",
     "axios": "^1.7.2",
     "bcryptjs": "^2.4.3",
+    "bull": "^4.15.1",
     "framer-motion": "^11.2.6",
     "jsonwebtoken": "^9.0.2",
     "next-auth": "^4.24.7",
+    "node-cron": "^3.0.3",
     "react-apexcharts": "^1.4.1",
     "react-calendar": "^5.0.0",
     "react-chartjs-2": "^5.2.0",
